Added different categories with different Routes

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Daly News gives you the best news daily on Politics, your city news, Sports news, National ,International News, News related to films and tvs and many more"
+      content="Student Times gives you the best news daily on Politics, your city news, Sports news, National ,International News, News related to films and tvs and many more"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
    
@@ -16,7 +16,7 @@
     <!-- Bootsrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-    <title>Daily News | Get Daily News reltaed to politics, Sports and more</title>
+    <title>Student Times | Get Student Times reltaed to politics, Sports and more</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
